@@ -18,6 +18,7 @@
 * [Bug 2886] Mis-spelling: "outlyer" should be "outlier".  dave@horsfall.org
 * [Bug 2889] ntp-dev-4.3.67 does not build on Windows.  perlinger@ntp.org
 * [Bug 2890] Ignore ENOBUFS on routing netlink socket.  Konstantin Khlebnikov.
+* [Bug 2906] make check needs better support for pthreads.  Harlan Stenn.
 * [Bug 2907] dist* build targets require our libevent/ to be enabled.  HStenn.
 * libntp/emalloc.c: Remove explicit include of stdint.h.  Harlan Stenn.
 * Put Unity CPPFLAGS items in unity_config.h.  Harlan Stenn.
